Crash in Compositing #94506

Closed
opened 2021-12-30 18:02:27 +01:00 by Aleksandr · 13 comments

System Information
Operating system: Linux-5.11.0-43-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557

Caused by 038f9b7f4a

Short description of error
When I switch to second render slot and change frame on timeline - crash.

Exact steps for others to reproduce the error

**System Information** Operating system: Linux-5.11.0-43-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Caused by 038f9b7f4a **Short description of error** When I switch to second render slot and change frame on timeline - crash. **Exact steps for others to reproduce the error** - With the default scene - Render Image F12 - In the Image editor, change the slot to "Slot 2" - In the Compositor, click Use Node (or refer video for reproducing steps) [Compose.crash.txt](https://archive.blender.org/developer/F12782075/Compose.crash.txt) [Screencast-2021-12-30_19.58.32.mp4](https://archive.blender.org/developer/F12782074/Screencast-2021-12-30_19.58.32.mp4)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena

Added subscriber: @jenkm

Added subscriber: @jenkm

I can confirm with steps:

  • With the default scene
  • Render Image F12
  • In the Image editor, change the slot to "Slot 2"
  • In the Compositor, click Use Node
Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20
Blender version: 3.1.0 Alpha, branch: master (modified), commit date: 2021-12-17 14:21, hash: rBc0d96ca9a5db
I can confirm with steps: - With the default scene - Render Image F12 - In the Image editor, change the slot to "Slot 2" - In the Compositor, click Use Node ``` Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20 Blender version: 3.1.0 Alpha, branch: master (modified), commit date: 2021-12-17 14:21, hash: rBc0d96ca9a5db ```

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Also confirmed on MacOS on the latest master build. This causes a segmentation fault, even in the debug/developer build; AddressSanitizer doesn't provide any information.

The resulting crash log looks identical to the one in the report.

Also confirmed on MacOS on the latest master build. This causes a segmentation fault, even in the debug/developer build; AddressSanitizer doesn't provide any information. The resulting crash log looks identical to the one in the report.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I can also confirm. Not bisected but probably broken by: 038f9b7f4a

Was introduced somewhere between eec1ea0ccf - 5ef3afd87c

I can also confirm. Not bisected but probably broken by: 038f9b7f4a Was introduced somewhere between eec1ea0ccf - 5ef3afd87c
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

Yes, caused by 038f9b7f4a

@Sergey: mind checking?

Yes, caused by 038f9b7f4a @Sergey: mind checking?

This issue was referenced by ed397ff507

This issue was referenced by ed397ff50786530dea127be26058f71abf0e3a3b

This issue was referenced by 924d2b8df6

This issue was referenced by 924d2b8df6017ab35dbd98610a825e9fdcce2991

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-01-05 12:32:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94506
No description provided.