Fix T94506: Crash in Compositing